src/test/testts.ts
let flag: null | undefined | string;
flag!.toString(); // ok
flag.toString(); // error
